CSC402/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt stmt_list
Rule 3     stmt_list -> empty
Rule 4     stmt -> VOID_TYPE ID ( opt_formal_args ) stmt
Rule 5     stmt -> data_type ID ( opt_formal_args ) stmt
Rule 6     stmt -> data_type ID opt_init opt_semi
Rule 7     stmt -> storable = exp opt_semi
Rule 8     stmt -> PRINT exp opt_semi
Rule 9     stmt -> ID ( opt_actual_args ) opt_semi
Rule 10    stmt -> RETURN opt_exp opt_semi
Rule 11    stmt -> WHILE ( exp ) stmt
Rule 12    stmt -> IF ( exp ) stmt opt_else
Rule 13    stmt -> { stmt_list }
Rule 14    data_type -> primitive_type
Rule 15    data_type -> primitive_type [ INTEGER ]
Rule 16    primitive_type -> INTEGER_TYPE
Rule 17    primitive_type -> DOUBLE_TYPE
Rule 18    primitive_type -> STRING_TYPE
Rule 19    opt_formal_args -> formal_args
Rule 20    opt_formal_args -> empty
Rule 21    formal_args -> data_type ID , formal_args
Rule 22    formal_args -> data_type ID
Rule 23    opt_init -> = exp
Rule 24    opt_init -> = { exp_list }
Rule 25    opt_init -> empty
Rule 26    exp_list -> exp , exp_list
Rule 27    exp_list -> exp
Rule 28    opt_actual_args -> actual_args
Rule 29    opt_actual_args -> empty
Rule 30    actual_args -> exp , actual_args
Rule 31    actual_args -> exp
Rule 32    opt_exp -> exp
Rule 33    opt_exp -> empty
Rule 34    opt_else -> ELSE stmt
Rule 35    opt_else -> empty
Rule 36    exp -> exp + exp
Rule 37    exp -> exp - exp
Rule 38    exp -> exp * exp
Rule 39    exp -> exp / exp
Rule 40    exp -> exp EQ exp
Rule 41    exp -> exp LE exp
Rule 42    exp -> exp GE exp
Rule 43    exp -> exp LT exp
Rule 44    exp -> exp GT exp
Rule 45    exp -> exp NE exp
Rule 46    exp -> exp MOD exp
Rule 47    exp -> exp AND exp
Rule 48    exp -> exp OR exp
Rule 49    exp -> INTEGER
Rule 50    exp -> DOUBLE
Rule 51    exp -> STRING
Rule 52    exp -> storable
Rule 53    exp -> ID ( opt_actual_args )
Rule 54    exp -> ( exp )
Rule 55    exp -> - exp
Rule 56    exp -> NOT exp
Rule 57    storable -> ID
Rule 58    storable -> ID [ exp ]
Rule 59    opt_semi -> ;
Rule 60    opt_semi -> empty
Rule 61    empty -> <empty>

Terminals, with rules where they appear

(                    : 4 5 9 11 12 53 54
)                    : 4 5 9 11 12 53 54
*                    : 38
+                    : 36
,                    : 21 26 30
-                    : 37 55
/                    : 39
;                    : 59
=                    : 7 23 24
AND                  : 47
DOUBLE               : 50
DOUBLE_TYPE          : 17
ELSE                 : 34
EQ                   : 40
GE                   : 42
GT                   : 44
ID                   : 4 5 6 9 21 22 53 57 58
IF                   : 12
INTEGER              : 15 49
INTEGER_TYPE         : 16
LE                   : 41
LT                   : 43
MOD                  : 46
NE                   : 45
NOT                  : 56
OR                   : 48
PRINT                : 8
RETURN               : 10
STRING               : 51
STRING_TYPE          : 18
VOID_TYPE            : 4
WHILE                : 11
[                    : 15 58
]                    : 15 58
error                : 
{                    : 13 24
}                    : 13 24

Nonterminals, with rules where they appear

actual_args          : 28 30
data_type            : 5 6 21 22
empty                : 3 20 25 29 33 35 60
exp                  : 7 8 11 12 23 26 27 30 31 32 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 54 55 56 58
exp_list             : 24 26
formal_args          : 19 21
opt_actual_args      : 9 53
opt_else             : 12
opt_exp              : 10
opt_formal_args      : 4 5
opt_init             : 6
opt_semi             : 6 7 8 9 10
primitive_type       : 14 15
program              : 0
stmt                 : 2 4 5 11 12 34
stmt_list            : 1 2 13
storable             : 7 52

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . empty
    (4) stmt -> . VOID_TYPE ID ( opt_formal_args ) stmt
    (5) stmt -> . data_type ID ( opt_formal_args ) stmt
    (6) stmt -> . data_type ID opt_init opt_semi
    (7) stmt -> . storable = exp opt_semi
    (8) stmt -> . PRINT exp opt_semi
    (9) stmt -> . ID ( opt_actual_args ) opt_semi
    (10) stmt -> . RETURN opt_exp opt_semi
    (11) stmt -> . WHILE ( exp ) stmt
    (12) stmt -> . IF ( exp ) stmt opt_else
    (13) stmt -> . { stmt_list }
    (61) empty -> .
    (14) data_type -> . primitive_type
    (15) data_type -> . primitive_type [ INTEGER ]
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]
    (16) primitive_type -> . INTEGER_TYPE
    (17) primitive_type -> . DOUBLE_TYPE
    (18) primitive_type -> . STRING_TYPE

    VOID_TYPE       shift and go to state 5
    PRINT           shift and go to state 9
    ID              shift and go to state 6
    RETURN          shift and go to state 10
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    {               shift and go to state 13
    $end            reduce using rule 61 (empty -> .)
    INTEGER_TYPE    shift and go to state 15
    DOUBLE_TYPE     shift and go to state 16
    STRING_TYPE     shift and go to state 17

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3
    empty                          shift and go to state 4
    data_type                      shift and go to state 7
    storable                       shift and go to state 8
    primitive_type                 shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .

    $end            reduce using rule 1 (program -> stmt_list .)


state 3

    (2) stmt_list -> stmt . stmt_list
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . empty
    (4) stmt -> . VOID_TYPE ID ( opt_formal_args ) stmt
    (5) stmt -> . data_type ID ( opt_formal_args ) stmt
    (6) stmt -> . data_type ID opt_init opt_semi
    (7) stmt -> . storable = exp opt_semi
    (8) stmt -> . PRINT exp opt_semi
    (9) stmt -> . ID ( opt_actual_args ) opt_semi
    (10) stmt -> . RETURN opt_exp opt_semi
    (11) stmt -> . WHILE ( exp ) stmt
    (12) stmt -> . IF ( exp ) stmt opt_else
    (13) stmt -> . { stmt_list }
    (61) empty -> .
    (14) data_type -> . primitive_type
    (15) data_type -> . primitive_type [ INTEGER ]
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]
    (16) primitive_type -> . INTEGER_TYPE
    (17) primitive_type -> . DOUBLE_TYPE
    (18) primitive_type -> . STRING_TYPE

    VOID_TYPE       shift and go to state 5
    PRINT           shift and go to state 9
    ID              shift and go to state 6
    RETURN          shift and go to state 10
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    {               shift and go to state 13
    $end            reduce using rule 61 (empty -> .)
    }               reduce using rule 61 (empty -> .)
    INTEGER_TYPE    shift and go to state 15
    DOUBLE_TYPE     shift and go to state 16
    STRING_TYPE     shift and go to state 17

    stmt                           shift and go to state 3
    stmt_list                      shift and go to state 18
    empty                          shift and go to state 4
    data_type                      shift and go to state 7
    storable                       shift and go to state 8
    primitive_type                 shift and go to state 14

state 4

    (3) stmt_list -> empty .

    $end            reduce using rule 3 (stmt_list -> empty .)
    }               reduce using rule 3 (stmt_list -> empty .)


state 5

    (4) stmt -> VOID_TYPE . ID ( opt_formal_args ) stmt

    ID              shift and go to state 19


state 6

    (9) stmt -> ID . ( opt_actual_args ) opt_semi
    (57) storable -> ID .
    (58) storable -> ID . [ exp ]

    (               shift and go to state 20
    =               reduce using rule 57 (storable -> ID .)
    [               shift and go to state 21


state 7

    (5) stmt -> data_type . ID ( opt_formal_args ) stmt
    (6) stmt -> data_type . ID opt_init opt_semi

    ID              shift and go to state 22


state 8

    (7) stmt -> storable . = exp opt_semi

    =               shift and go to state 23


state 9

    (8) stmt -> PRINT . exp opt_semi
    (36) exp -> . exp + exp
    (37) exp -> . exp - exp
    (38) exp -> . exp * exp
    (39) exp -> . exp / exp
    (40) exp -> . exp EQ exp
    (41) exp -> . exp LE exp
    (42) exp -> . exp GE exp
    (43) exp -> . exp LT exp
    (44) exp -> . exp GT exp
    (45) exp -> . exp NE exp
    (46) exp -> . exp MOD exp
    (47) exp -> . exp AND exp
    (48) exp -> . exp OR exp
    (49) exp -> . INTEGER
    (50) exp -> . DOUBLE
    (51) exp -> . STRING
    (52) exp -> . storable
    (53) exp -> . ID ( opt_actual_args )
    (54) exp -> . ( exp )
    (55) exp -> . - exp
    (56) exp -> . NOT exp
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]

    INTEGER         shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 30
    (               shift and go to state 31
    -               shift and go to state 25
    NOT             shift and go to state 32

    exp                            shift and go to state 24
    storable                       shift and go to state 29

state 10

    (10) stmt -> RETURN . opt_exp opt_semi
    (32) opt_exp -> . exp
    (33) opt_exp -> . empty
    (36) exp -> . exp + exp
    (37) exp -> . exp - exp
    (38) exp -> . exp * exp
    (39) exp -> . exp / exp
    (40) exp -> . exp EQ exp
    (41) exp -> . exp LE exp
    (42) exp -> . exp GE exp
    (43) exp -> . exp LT exp
    (44) exp -> . exp GT exp
    (45) exp -> . exp NE exp
    (46) exp -> . exp MOD exp
    (47) exp -> . exp AND exp
    (48) exp -> . exp OR exp
    (49) exp -> . INTEGER
    (50) exp -> . DOUBLE
    (51) exp -> . STRING
    (52) exp -> . storable
    (53) exp -> . ID ( opt_actual_args )
    (54) exp -> . ( exp )
    (55) exp -> . - exp
    (56) exp -> . NOT exp
    (61) empty -> .
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]

  ! shift/reduce conflict for ID resolved as shift
    INTEGER         shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 30
    (               shift and go to state 31
    -               shift and go to state 25
    NOT             shift and go to state 32
    ;               reduce using rule 61 (empty -> .)
    VOID_TYPE       reduce using rule 61 (empty -> .)
    PRINT           reduce using rule 61 (empty -> .)
    RETURN          reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    {               reduce using rule 61 (empty -> .)
    INTEGER_TYPE    reduce using rule 61 (empty -> .)
    DOUBLE_TYPE     reduce using rule 61 (empty -> .)
    STRING_TYPE     reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)
    }               reduce using rule 61 (empty -> .)
    ELSE            reduce using rule 61 (empty -> .)

  ! ID              [ reduce using rule 61 (empty -> .) ]

    opt_exp                        shift and go to state 33
    exp                            shift and go to state 34
    empty                          shift and go to state 35
    storable                       shift and go to state 29

state 11

    (11) stmt -> WHILE . ( exp ) stmt

    (               shift and go to state 36


state 12

    (12) stmt -> IF . ( exp ) stmt opt_else

    (               shift and go to state 37


state 13

    (13) stmt -> { . stmt_list }
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . empty
    (4) stmt -> . VOID_TYPE ID ( opt_formal_args ) stmt
    (5) stmt -> . data_type ID ( opt_formal_args ) stmt
    (6) stmt -> . data_type ID opt_init opt_semi
    (7) stmt -> . storable = exp opt_semi
    (8) stmt -> . PRINT exp opt_semi
    (9) stmt -> . ID ( opt_actual_args ) opt_semi
    (10) stmt -> . RETURN opt_exp opt_semi
    (11) stmt -> . WHILE ( exp ) stmt
    (12) stmt -> . IF ( exp ) stmt opt_else
    (13) stmt -> . { stmt_list }
    (61) empty -> .
    (14) data_type -> . primitive_type
    (15) data_type -> . primitive_type [ INTEGER ]
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]
    (16) primitive_type -> . INTEGER_TYPE
    (17) primitive_type -> . DOUBLE_TYPE
    (18) primitive_type -> . STRING_TYPE

    VOID_TYPE       shift and go to state 5
    PRINT           shift and go to state 9
    ID              shift and go to state 6
    RETURN          shift and go to state 10
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    {               shift and go to state 13
    }               reduce using rule 61 (empty -> .)
    INTEGER_TYPE    shift and go to state 15
    DOUBLE_TYPE     shift and go to state 16
    STRING_TYPE     shift and go to state 17

    stmt_list                      shift and go to state 38
    stmt                           shift and go to state 3
    empty                          shift and go to state 4
    data_type                      shift and go to state 7
    storable                       shift and go to state 8
    primitive_type                 shift and go to state 14

state 14

    (14) data_type -> primitive_type .
    (15) data_type -> primitive_type . [ INTEGER ]

    ID              reduce using rule 14 (data_type -> primitive_type .)
    [               shift and go to state 39


state 15

    (16) primitive_type -> INTEGER_TYPE .

    [               reduce using rule 16 (primitive_type -> INTEGER_TYPE .)
    ID              reduce using rule 16 (primitive_type -> INTEGER_TYPE .)


state 16

    (17) primitive_type -> DOUBLE_TYPE .

    [               reduce using rule 17 (primitive_type -> DOUBLE_TYPE .)
    ID              reduce using rule 17 (primitive_type -> DOUBLE_TYPE .)


state 17

    (18) primitive_type -> STRING_TYPE .

    [               reduce using rule 18 (primitive_type -> STRING_TYPE .)
    ID              reduce using rule 18 (primitive_type -> STRING_TYPE .)


state 18

    (2) stmt_list -> stmt stmt_list .

    $end            reduce using rule 2 (stmt_list -> stmt stmt_list .)
    }               reduce using rule 2 (stmt_list -> stmt stmt_list .)


state 19

    (4) stmt -> VOID_TYPE ID . ( opt_formal_args ) stmt

    (               shift and go to state 40


state 20

    (9) stmt -> ID ( . opt_actual_args ) opt_semi
    (28) opt_actual_args -> . actual_args
    (29) opt_actual_args -> . empty
    (30) actual_args -> . exp , actual_args
    (31) actual_args -> . exp
    (61) empty -> .
    (36) exp -> . exp + exp
    (37) exp -> . exp - exp
    (38) exp -> . exp * exp
    (39) exp -> . exp / exp
    (40) exp -> . exp EQ exp
    (41) exp -> . exp LE exp
    (42) exp -> . exp GE exp
    (43) exp -> . exp LT exp
    (44) exp -> . exp GT exp
    (45) exp -> . exp NE exp
    (46) exp -> . exp MOD exp
    (47) exp -> . exp AND exp
    (48) exp -> . exp OR exp
    (49) exp -> . INTEGER
    (50) exp -> . DOUBLE
    (51) exp -> . STRING
    (52) exp -> . storable
    (53) exp -> . ID ( opt_actual_args )
    (54) exp -> . ( exp )
    (55) exp -> . - exp
    (56) exp -> . NOT exp
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]

    )               reduce using rule 61 (empty -> .)
    INTEGER         shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 30
    (               shift and go to state 31
    -               shift and go to state 25
    NOT             shift and go to state 32

    opt_actual_args                shift and go to state 41
    actual_args                    shift and go to state 42
    empty                          shift and go to state 43
    exp                            shift and go to state 44
    storable                       shift and go to state 29

state 21

    (58) storable -> ID [ . exp ]
    (36) exp -> . exp + exp
    (37) exp -> . exp - exp
    (38) exp -> . exp * exp
    (39) exp -> . exp / exp
    (40) exp -> . exp EQ exp
    (41) exp -> . exp LE exp
    (42) exp -> . exp GE exp
    (43) exp -> . exp LT exp
    (44) exp -> . exp GT exp
    (45) exp -> . exp NE exp
    (46) exp -> . exp MOD exp
    (47) exp -> . exp AND exp
    (48) exp -> . exp OR exp
    (49) exp -> . INTEGER
    (50) exp -> . DOUBLE
    (51) exp -> . STRING
    (52) exp -> . storable
    (53) exp -> . ID ( opt_actual_args )
    (54) exp -> . ( exp )
    (55) exp -> . - exp
    (56) exp -> . NOT exp
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]

    INTEGER         shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 30
    (               shift and go to state 31
    -               shift and go to state 25
    NOT             shift and go to state 32

    exp                            shift and go to state 45
    storable                       shift and go to state 29

state 22

    (5) stmt -> data_type ID . ( opt_formal_args ) stmt
    (6) stmt -> data_type ID . opt_init opt_semi
    (23) opt_init -> . = exp
    (24) opt_init -> . = { exp_list }
    (25) opt_init -> . empty
    (61) empty -> .

    (               shift and go to state 46
    =               shift and go to state 48
    ;               reduce using rule 61 (empty -> .)
    VOID_TYPE       reduce using rule 61 (empty -> .)
    PRINT           reduce using rule 61 (empty -> .)
    ID              reduce using rule 61 (empty -> .)
    RETURN          reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    {               reduce using rule 61 (empty -> .)
    INTEGER_TYPE    reduce using rule 61 (empty -> .)
    DOUBLE_TYPE     reduce using rule 61 (empty -> .)
    STRING_TYPE     reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)
    }               reduce using rule 61 (empty -> .)
    ELSE            reduce using rule 61 (empty -> .)

    opt_init                       shift and go to state 47
    empty                          shift and go to state 49

state 23

    (7) stmt -> storable = . exp opt_semi
    (36) exp -> . exp + exp
    (37) exp -> . exp - exp
    (38) exp -> . exp * exp
    (39) exp -> . exp / exp
    (40) exp -> . exp EQ exp
    (41) exp -> . exp LE exp
    (42) exp -> . exp GE exp
    (43) exp -> . exp LT exp
    (44) exp -> . exp GT exp
    (45) exp -> . exp NE exp
    (46) exp -> . exp MOD exp
    (47) exp -> . exp AND exp
    (48) exp -> . exp OR exp
    (49) exp -> . INTEGER
    (50) exp -> . DOUBLE
    (51) exp -> . STRING
    (52) exp -> . storable
    (53) exp -> . ID ( opt_actual_args )
    (54) exp -> . ( exp )
    (55) exp -> . - exp
    (56) exp -> . NOT exp
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]

    INTEGER         shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 30
    (               shift and go to state 31
    -               shift and go to state 25
    NOT             shift and go to state 32

    storable                       shift and go to state 29
    exp                            shift and go to state 50

state 24

    (8) stmt -> PRINT exp . opt_semi
    (36) exp -> exp . + exp
    (37) exp -> exp . - exp
    (38) exp -> exp . * exp
    (39) exp -> exp . / exp
    (40) exp -> exp . EQ exp
    (41) exp -> exp . LE exp
    (42) exp -> exp . GE exp
    (43) exp -> exp . LT exp
    (44) exp -> exp . GT exp
    (45) exp -> exp . NE exp
    (46) exp -> exp . MOD exp
    (47) exp -> exp . AND exp
    (48) exp -> exp . OR exp
    (59) opt_semi -> . ;
    (60) opt_semi -> . empty
    (61) empty -> .

    +               shift and go to state 52
    -               shift and go to state 53
    *               shift and go to state 54
    /               shift and go to state 55
    EQ              shift and go to state 56
    LE              shift and go to state 57
    GE              shift and go to state 58
    LT              shift and go to state 59
    GT              shift and go to state 60
    NE              shift and go to state 61
    MOD             shift and go to state 62
    AND             shift and go to state 63
    OR              shift and go to state 64
    ;               shift and go to state 65
    VOID_TYPE       reduce using rule 61 (empty -> .)
    PRINT           reduce using rule 61 (empty -> .)
    ID              reduce using rule 61 (empty -> .)
    RETURN          reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    {               reduce using rule 61 (empty -> .)
    INTEGER_TYPE    reduce using rule 61 (empty -> .)
    DOUBLE_TYPE     reduce using rule 61 (empty -> .)
    STRING_TYPE     reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)
    }               reduce using rule 61 (empty -> .)
    ELSE            reduce using rule 61 (empty -> .)

    opt_semi                       shift and go to state 51
    empty                          shift and go to state 66

state 25

    (55) exp -> - . exp
    (36) exp -> . exp + exp
    (37) exp -> . exp - exp
    (38) exp -> . exp * exp
    (39) exp -> . exp / exp
    (40) exp -> . exp EQ exp
    (41) exp -> . exp LE exp
    (42) exp -> . exp GE exp
    (43) exp -> . exp LT exp
    (44) exp -> . exp GT exp
    (45) exp -> . exp NE exp
    (46) exp -> . exp MOD exp
    (47) exp -> . exp AND exp
    (48) exp -> . exp OR exp
    (49) exp -> . INTEGER
    (50) exp -> . DOUBLE
    (51) exp -> . STRING
    (52) exp -> . storable
    (53) exp -> . ID ( opt_actual_args )
    (54) exp -> . ( exp )
    (55) exp -> . - exp
    (56) exp -> . NOT exp
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]

    INTEGER         shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 30
    (               shift and go to state 31
    -               shift and go to state 25
    NOT             shift and go to state 32

    exp                            shift and go to state 67
    storable                       shift and go to state 29

state 26

    (49) exp -> INTEGER .

    +               reduce using rule 49 (exp -> INTEGER .)
    -               reduce using rule 49 (exp -> INTEGER .)
    *               reduce using rule 49 (exp -> INTEGER .)
    /               reduce using rule 49 (exp -> INTEGER .)
    EQ              reduce using rule 49 (exp -> INTEGER .)
    LE              reduce using rule 49 (exp -> INTEGER .)
    GE              reduce using rule 49 (exp -> INTEGER .)
    LT              reduce using rule 49 (exp -> INTEGER .)
    GT              reduce using rule 49 (exp -> INTEGER .)
    NE              reduce using rule 49 (exp -> INTEGER .)
    MOD             reduce using rule 49 (exp -> INTEGER .)
    AND             reduce using rule 49 (exp -> INTEGER .)
    OR              reduce using rule 49 (exp -> INTEGER .)
    ;               reduce using rule 49 (exp -> INTEGER .)
    VOID_TYPE       reduce using rule 49 (exp -> INTEGER .)
    PRINT           reduce using rule 49 (exp -> INTEGER .)
    ID              reduce using rule 49 (exp -> INTEGER .)
    RETURN          reduce using rule 49 (exp -> INTEGER .)
    WHILE           reduce using rule 49 (exp -> INTEGER .)
    IF              reduce using rule 49 (exp -> INTEGER .)
    {               reduce using rule 49 (exp -> INTEGER .)
    INTEGER_TYPE    reduce using rule 49 (exp -> INTEGER .)
    DOUBLE_TYPE     reduce using rule 49 (exp -> INTEGER .)
    STRING_TYPE     reduce using rule 49 (exp -> INTEGER .)
    $end            reduce using rule 49 (exp -> INTEGER .)
    }               reduce using rule 49 (exp -> INTEGER .)
    ELSE            reduce using rule 49 (exp -> INTEGER .)
    ,               reduce using rule 49 (exp -> INTEGER .)
    )               reduce using rule 49 (exp -> INTEGER .)
    ]               reduce using rule 49 (exp -> INTEGER .)


state 27

    (50) exp -> DOUBLE .

    +               reduce using rule 50 (exp -> DOUBLE .)
    -               reduce using rule 50 (exp -> DOUBLE .)
    *               reduce using rule 50 (exp -> DOUBLE .)
    /               reduce using rule 50 (exp -> DOUBLE .)
    EQ              reduce using rule 50 (exp -> DOUBLE .)
    LE              reduce using rule 50 (exp -> DOUBLE .)
    GE              reduce using rule 50 (exp -> DOUBLE .)
    LT              reduce using rule 50 (exp -> DOUBLE .)
    GT              reduce using rule 50 (exp -> DOUBLE .)
    NE              reduce using rule 50 (exp -> DOUBLE .)
    MOD             reduce using rule 50 (exp -> DOUBLE .)
    AND             reduce using rule 50 (exp -> DOUBLE .)
    OR              reduce using rule 50 (exp -> DOUBLE .)
    ;               reduce using rule 50 (exp -> DOUBLE .)
    VOID_TYPE       reduce using rule 50 (exp -> DOUBLE .)
    PRINT           reduce using rule 50 (exp -> DOUBLE .)
    ID              reduce using rule 50 (exp -> DOUBLE .)
    RETURN          reduce using rule 50 (exp -> DOUBLE .)
    WHILE           reduce using rule 50 (exp -> DOUBLE .)
    IF              reduce using rule 50 (exp -> DOUBLE .)
    {               reduce using rule 50 (exp -> DOUBLE .)
    INTEGER_TYPE    reduce using rule 50 (exp -> DOUBLE .)
    DOUBLE_TYPE     reduce using rule 50 (exp -> DOUBLE .)
    STRING_TYPE     reduce using rule 50 (exp -> DOUBLE .)
    $end            reduce using rule 50 (exp -> DOUBLE .)
    }               reduce using rule 50 (exp -> DOUBLE .)
    ELSE            reduce using rule 50 (exp -> DOUBLE .)
    ,               reduce using rule 50 (exp -> DOUBLE .)
    )               reduce using rule 50 (exp -> DOUBLE .)
    ]               reduce using rule 50 (exp -> DOUBLE .)


state 28

    (51) exp -> STRING .

    +               reduce using rule 51 (exp -> STRING .)
    -               reduce using rule 51 (exp -> STRING .)
    *               reduce using rule 51 (exp -> STRING .)
    /               reduce using rule 51 (exp -> STRING .)
    EQ              reduce using rule 51 (exp -> STRING .)
    LE              reduce using rule 51 (exp -> STRING .)
    GE              reduce using rule 51 (exp -> STRING .)
    LT              reduce using rule 51 (exp -> STRING .)
    GT              reduce using rule 51 (exp -> STRING .)
    NE              reduce using rule 51 (exp -> STRING .)
    MOD             reduce using rule 51 (exp -> STRING .)
    AND             reduce using rule 51 (exp -> STRING .)
    OR              reduce using rule 51 (exp -> STRING .)
    ;               reduce using rule 51 (exp -> STRING .)
    VOID_TYPE       reduce using rule 51 (exp -> STRING .)
    PRINT           reduce using rule 51 (exp -> STRING .)
    ID              reduce using rule 51 (exp -> STRING .)
    RETURN          reduce using rule 51 (exp -> STRING .)
    WHILE           reduce using rule 51 (exp -> STRING .)
    IF              reduce using rule 51 (exp -> STRING .)
    {               reduce using rule 51 (exp -> STRING .)
    INTEGER_TYPE    reduce using rule 51 (exp -> STRING .)
    DOUBLE_TYPE     reduce using rule 51 (exp -> STRING .)
    STRING_TYPE     reduce using rule 51 (exp -> STRING .)
    $end            reduce using rule 51 (exp -> STRING .)
    }               reduce using rule 51 (exp -> STRING .)
    ELSE            reduce using rule 51 (exp -> STRING .)
    ,               reduce using rule 51 (exp -> STRING .)
    )               reduce using rule 51 (exp -> STRING .)
    ]               reduce using rule 51 (exp -> STRING .)


state 29

    (52) exp -> storable .

    +               reduce using rule 52 (exp -> storable .)
    -               reduce using rule 52 (exp -> storable .)
    *               reduce using rule 52 (exp -> storable .)
    /               reduce using rule 52 (exp -> storable .)
    EQ              reduce using rule 52 (exp -> storable .)
    LE              reduce using rule 52 (exp -> storable .)
    GE              reduce using rule 52 (exp -> storable .)
    LT              reduce using rule 52 (exp -> storable .)
    GT              reduce using rule 52 (exp -> storable .)
    NE              reduce using rule 52 (exp -> storable .)
    MOD             reduce using rule 52 (exp -> storable .)
    AND             reduce using rule 52 (exp -> storable .)
    OR              reduce using rule 52 (exp -> storable .)
    ;               reduce using rule 52 (exp -> storable .)
    VOID_TYPE       reduce using rule 52 (exp -> storable .)
    PRINT           reduce using rule 52 (exp -> storable .)
    ID              reduce using rule 52 (exp -> storable .)
    RETURN          reduce using rule 52 (exp -> storable .)
    WHILE           reduce using rule 52 (exp -> storable .)
    IF              reduce using rule 52 (exp -> storable .)
    {               reduce using rule 52 (exp -> storable .)
    INTEGER_TYPE    reduce using rule 52 (exp -> storable .)
    DOUBLE_TYPE     reduce using rule 52 (exp -> storable .)
    STRING_TYPE     reduce using rule 52 (exp -> storable .)
    $end            reduce using rule 52 (exp -> storable .)
    }               reduce using rule 52 (exp -> storable .)
    ELSE            reduce using rule 52 (exp -> storable .)
    ,               reduce using rule 52 (exp -> storable .)
    )               reduce using rule 52 (exp -> storable .)
    ]               reduce using rule 52 (exp -> storable .)


state 30

    (53) exp -> ID . ( opt_actual_args )
    (57) storable -> ID .
    (58) storable -> ID . [ exp ]

    (               shift and go to state 68
    +               reduce using rule 57 (storable -> ID .)
    -               reduce using rule 57 (storable -> ID .)
    *               reduce using rule 57 (storable -> ID .)
    /               reduce using rule 57 (storable -> ID .)
    EQ              reduce using rule 57 (storable -> ID .)
    LE              reduce using rule 57 (storable -> ID .)
    GE              reduce using rule 57 (storable -> ID .)
    LT              reduce using rule 57 (storable -> ID .)
    GT              reduce using rule 57 (storable -> ID .)
    NE              reduce using rule 57 (storable -> ID .)
    MOD             reduce using rule 57 (storable -> ID .)
    AND             reduce using rule 57 (storable -> ID .)
    OR              reduce using rule 57 (storable -> ID .)
    ;               reduce using rule 57 (storable -> ID .)
    VOID_TYPE       reduce using rule 57 (storable -> ID .)
    PRINT           reduce using rule 57 (storable -> ID .)
    ID              reduce using rule 57 (storable -> ID .)
    RETURN          reduce using rule 57 (storable -> ID .)
    WHILE           reduce using rule 57 (storable -> ID .)
    IF              reduce using rule 57 (storable -> ID .)
    {               reduce using rule 57 (storable -> ID .)
    INTEGER_TYPE    reduce using rule 57 (storable -> ID .)
    DOUBLE_TYPE     reduce using rule 57 (storable -> ID .)
    STRING_TYPE     reduce using rule 57 (storable -> ID .)
    $end            reduce using rule 57 (storable -> ID .)
    }               reduce using rule 57 (storable -> ID .)
    ELSE            reduce using rule 57 (storable -> ID .)
    ,               reduce using rule 57 (storable -> ID .)
    )               reduce using rule 57 (storable -> ID .)
    ]               reduce using rule 57 (storable -> ID .)
    [               shift and go to state 21


state 31

    (54) exp -> ( . exp )
    (36) exp -> . exp + exp
    (37) exp -> . exp - exp
    (38) exp -> . exp * exp
    (39) exp -> . exp / exp
    (40) exp -> . exp EQ exp
    (41) exp -> . exp LE exp
    (42) exp -> . exp GE exp
    (43) exp -> . exp LT exp
    (44) exp -> . exp GT exp
    (45) exp -> . exp NE exp
    (46) exp -> . exp MOD exp
    (47) exp -> . exp AND exp
    (48) exp -> . exp OR exp
    (49) exp -> . INTEGER
    (50) exp -> . DOUBLE
    (51) exp -> . STRING
    (52) exp -> . storable
    (53) exp -> . ID ( opt_actual_args )
    (54) exp -> . ( exp )
    (55) exp -> . - exp
    (56) exp -> . NOT exp
    (57) storable -> . ID
    (58) storable -> . ID [ exp ]

    INTEGER         shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    ID              shift and go to state 30
    (               shift and go to state 31
    -               shift and go to state 25
    NOT             shift and go to state 32

    exp                            shift and go to state 69
    storable                       shift and go to state 29

state 32

    (56) exp -> NOT . exp
    (36) exp -> . exp + exp
    (37) exp -> . exp - exp
    (38) exp -> . exp * exp
    (39) exp -> . exp / exp
    (40) exp -> . exp EQ exp
    (41) exp -> . exp LE exp
    (42) exp -> . exp GE exp
    (43) exp -> . exp LT exp
    (44) exp -> . exp GT exp
    (45) exp -> . exp NE exp
    (46) exp -> . exp MOD exp
    (47) exp -> . exp AND exp
    (48) exp -> . exp OR exp
    (49) exp -> . INTEGER
    (50) exp -> . DOUBLE
    (51) exp -> . STRING
